; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_dirent.c__zip_write8.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_dirent.c__zip_write8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_zip_write8(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = and i32 %5, 255
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @putc(i32 %6, i32* %7)
  %9 = load i32, i32* %3, align 4
  %10 = ashr i32 %9, 8
  %11 = and i32 %10, 255
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @putc(i32 %11, i32* %12)
  %14 = load i32, i32* %3, align 4
  %15 = ashr i32 %14, 16
  %16 = and i32 %15, 255
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @putc(i32 %16, i32* %17)
  %19 = load i32, i32* %3, align 4
  %20 = ashr i32 %19, 24
  %21 = and i32 %20, 255
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @putc(i32 %21, i32* %22)
  %24 = load i32, i32* %3, align 4
  %25 = ashr i32 %24, 32
  %26 = and i32 %25, 255
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @putc(i32 %26, i32* %27)
  %29 = load i32, i32* %3, align 4
  %30 = ashr i32 %29, 40
  %31 = and i32 %30, 255
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @putc(i32 %31, i32* %32)
  %34 = load i32, i32* %3, align 4
  %35 = ashr i32 %34, 48
  %36 = and i32 %35, 255
  %37 = load i32*, i32** %4, align 8
  %38 = call i32 @putc(i32 %36, i32* %37)
  %39 = load i32, i32* %3, align 4
  %40 = ashr i32 %39, 56
  %41 = and i32 %40, 255
  %42 = load i32*, i32** %4, align 8
  %43 = call i32 @putc(i32 %41, i32* %42)
  ret void
}

declare dso_local i32 @putc(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
